--- a/assets/icon_base.yml
+++ b/assets/icon_base.yml
@@ -23,6 +23,13 @@ ascii_hollow:
     closed: ▷
     open: ▽
 
+prokox:
+  <<: *ascii
+  default_icon: XD
+  folder:
+    closed: DD
+    open: XX
+
 devicons: &devicons
   link:
     broken: 
